Mon Mar 11 16:38:49 2002  Steve Huston  <shuston@riverace.com>

        * tests/Reactor_Notify_Test.cpp: Added missing #include "ace/Reactor.h"
          to fix Visual Age C++ compile error.

Mon Mar 11 16:27:59 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv1/RT_Thread_Per_Connection_Logging_Server.cpp:
          Added missing #include "ace/Auto_Ptr.h" to fix compile problem
          for platforms w/o native auto_ptr (like MSVC).

Mon Mar 11 14:23:00 2002  Si Mong Park  <spark@ociweb.com>

 	* tests/Config_Test.cpp:
 	  Removed one of the delete statement that deletes twice and thus
 	  causing an invalid access violation.

Mon Mar 11 10:28:45 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/vxworks_modify.pl:

          Update this script to work correctly with the new CORBA
          Environment style.

Mon Mar 11 12:17:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/build_dll.bor:
        * include/makeinclude/build_exe.bor:
        * include/makeinclude/build_lib.bor:
        * include/makeinclude/compiler.bor:
        * include/makeinclude/decorator.bor:
        * include/makeinclude/make_flags.bor:
        * include/makeinclude/outputdir.bor:
          Added support for a real unicode build with BCB builder. A real
          unicode build can for example be done with:
          make -f makefile.bor -DUNICODE
          Doing a real unicode build means that the defines ACE_USES_WCHAR,
          UNICODE and _UNICODE are set, diffent BCB object files are used
          to link with and the compiler gets the extra compiler option -WU.
          The dll names have a 'u' added so that unicode dll's are separated
          from the non-unicode dll's. Also the output files are build in a
          separate subdirectory.

        * ACE-INSTALL.html:
          Explained the BCB make options that can be used with ACE

Mon Mar 11 11:35:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
